--- a/BattleWoven/BattleWoven.vcxproj
+++ b/BattleWoven/BattleWoven.vcxproj
@@ -148,6 +148,7 @@
     <Text Include="config.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Animation.hpp" />
     <ClInclude Include="Assets.hpp" />
     <ClInclude Include="Components.hpp" />
     <ClInclude Include="Entity.hpp" />
