Changed spacing in a function because I didn't like it.

--- a/BattleWoven/BattleWoven.vcxproj
+++ b/BattleWoven/BattleWoven.vcxproj
@@ -156,6 +156,9 @@
     <ClInclude Include="GameEngine.h" />
     <ClInclude Include="Vec2.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="config.JSON" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
