--- a/BattleWoven/BattleWoven.vcxproj.filters
+++ b/BattleWoven/BattleWoven.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="..\ImGui-SFML\Source\imgui-SFML.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="config.txt">
@@ -55,5 +58,19 @@
     <ClInclude Include="Entity_Manager.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Animation.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Assets.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEngine.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="config.JSON">
+      <Filter>Source Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
